# nrpilot-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: dependencies.py  main.py
app/adapters/documentation/: client.py
app/adapters/kubernetes/: client.py  config.py  exceptions.py
app/agents/: nrpilot.py
app/api/: health.py
app/api/v1/: chat.py
app/core/: settings.py
app/domain/documentation/: exceptions.py  ports.py
app/domain/kubernetes/: ports.py
app/models/agents/: nrpilot.py
app/models/documentation/: models.py
app/models/kubernetes/: models.py
app/services/documentation/: service.py
app/services/kubernetes/: service.py
app/tools/: documentation.py  kubernetes_diagnostics.py
k8s/base/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
tests/: conftest.py
tests/adapters/documentation/: test_client.py
tests/adapters/kubernetes/: conftest.py  test_client.py  test_config.py
tests/agents/: test_nrpilot.py
tests/api/: test_chat.py  test_health.py
tests/services/documentation/: test_service.py
tests/services/kubernetes/: test_service.py
tests/tools/: test_documentation.py  test_kubernetes_diagnostics.py
